tests/unit-fail-compilation/j023f.ref
j023f.c:3:2: error: Void value as right operand in assignment.
  Undefined behavior (UB-TEAS4). See C11 sec. 6.3.2.2:1, J.2:1 item 23
Translation failed (config dumped). Run kcc -d j023f.c to see commands run.
